# prism

./: .credentials  .env.example  .gitignore  Cargo.toml  PRISM_ENHANCEMENT_SPEC.md  README.md
agents/: architecture.md  architecture.toml  objective.md  performance.md  performance.toml  security.md  security.toml  style.md  style.toml  summary.md  summary.toml  tests.md  tests.toml
config/: default.toml
docs/: README.md  architecture.md  features.md  llm_configuration.md  roadmap.md
src/: app.rs  config.rs  error.rs  main.rs
src/agents/: context.rs  loader.rs  mod.rs  models.rs  orchestrator.rs  runner.rs
src/github/: api.rs  client.rs  mod.rs  models.rs
src/review/: cache.rs  draft_store.rs  manual.rs  mod.rs  models.rs  publisher.rs
src/tickets/: extractor.rs  mod.rs  models.rs  provider.rs
src/tickets/providers/: jira.rs  mock.rs  mod.rs
src/tui/: event.rs  keybindings.rs  mod.rs  terminal.rs
src/ui/: editor.rs  mod.rs  theme.rs
src/ui/components/: agent_status.rs  comment_card.rs  diff_view.rs  editor.rs  file_checklist.rs  help.rs  keybind_bar.rs  markdown.rs  mod.rs  popup.rs  progress.rs  syntax.rs  ticket_panel.rs  token_stats.rs
src/ui/screens/: agent_config.rs  agent_runner.rs  agent_wizard.rs  ai_fix_output.rs  claude_output.rs  double_check.rs  file_tree.rs  mod.rs  pr_detail.rs  pr_list.rs  review_compose.rs  setup.rs  summary_preview.rs
